:sunrise_over_mountains: stop supporting answer text overlap on mobile

--- a/NHS111/NHS111.Web/Content/css_NhsUK/question.css
+++ b/NHS111/NHS111.Web/Content/css_NhsUK/question.css
@@ -17,8 +17,7 @@ p.answer:last-of-type {
 }
 
 a.help-text-link {
-    top: 50px;
-    position: absolute;
+    margin-top:5px;
 }
 
 a {
@@ -35,11 +34,7 @@ span.answer-text {
     padding-left: 5px;
 }
 
-label.withPadding {
-    padding-bottom: 35px;
-}
-
-p.answer:hover {
+p.answer label:hover {
     background: #ddd;
 }
 
@@ -95,7 +90,7 @@ div.question-rationale {
     font-size: 18px;
     padding-left: 43px;
     position: relative;
-    margin-top: 0px;
+    margin-top: 10px;
     margin-bottom: 5px;
 }
 
